scrum-116: updated white-space